--- a/src/components/Layout/Introduce/Introduce.module.scss
+++ b/src/components/Layout/Introduce/Introduce.module.scss
@@ -6,9 +6,12 @@
     gap: 20px;
     padding: 150px 0;
     background: $primary;
+
     // background-image: linear-gradient(to bottom, #000 0%, $primary 100%);
     // background-image: linear-gradient(to bottom, $primary 0%, #8d08013d 100%);
-
+    @include breakpoint(sm) {
+        padding: 0;
+    }
 
     &__header {
         margin: 100px 0 50px 0;
@@ -100,18 +103,19 @@
             "coding seo"
             "cms cms ";
 
-            
-            span {
-                height: 100%;
-                width: 100%;
-                padding: 30px;
-                border-radius: $borderRadius;
-                
+
+        span {
+            height: 100%;
+            width: 100%;
+            padding: 30px;
+            border-radius: $borderRadius;
+
         }
 
         span:first-child {
             background: rgba(101, 14, 163, 0.57);
             grid-area: coding;
+
             @include breakpoint(sm) {
                 height: auto;
 
@@ -121,6 +125,7 @@
         span:nth-child(2) {
             background: rgba(146, 54, 128, 0.57);
             grid-area: seo;
+
             @include breakpoint(sm) {
                 height: auto;
 
