--- a/src/components/Layout/Footer/Footer.module.scss
+++ b/src/components/Layout/Footer/Footer.module.scss
@@ -4,14 +4,9 @@
     display: grid;
     justify-items: center;
     gap: 20px;
-    padding: 80px 0;
+    padding: 80px 0 30px 0;
     background: $primary;
     // background-image: linear-gradient(to bottom, #8d08013d 0%, $primary 100%);
-
-
-    h2:hover {
-        color: white;
-    }
 
     .contact{
         display: flex;
@@ -30,6 +25,7 @@
     .social {
         display: flex;
         gap: 2em;
+        margin: 1em;
 
         a {
             border: 1px solid;
