--- a/src/components/UI/Modal/Modal.module.scss
+++ b/src/components/UI/Modal/Modal.module.scss
@@ -1,3 +1,6 @@
+@import '/src/styles/variables.scss';
+
+
 .backdrop {
     position: fixed;
     top: 0;
@@ -13,12 +16,24 @@
     top: 20vh;
     left: 5%;
     width: 90%;
-    background-color: white;
+    background-color: $white;
     padding: 1rem;
     border-radius: 14px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
     z-index: 3000;
     animation: slide-down 300ms ease-out forwards;
+
+    &__toggle {
+        color: black;
+        position: relative;
+        cursor: pointer;
+
+        svg {
+            font-size: 1.5rem;
+        }
+
+       
+    }
   }
   
   
