--- a/src/components/Layout/Contact/ContactDetails.module.scss
+++ b/src/components/Layout/Contact/ContactDetails.module.scss
@@ -29,10 +29,18 @@
         padding: 4em;
 
         a {
+            display: flex;
+            align-items: center;
+            gap: 0.5em;
             color: #000;
 
-            img {
-                width: 2em;
+            svg {
+                font-size: 1.4em;
+                color: $pink;
+            }
+
+            &:hover {
+                color: $pink;
             }
         }
     }
