--- a/src/components/UI/Modal/Modal.module.scss
+++ b/src/components/UI/Modal/Modal.module.scss
@@ -11,6 +11,7 @@
   height: 100vh;
   z-index: 2000;
   background-color: rgba(0, 0, 0, 0.75);
+  backdrop-filter: blur(8px);
 }
 
 .modal {
@@ -24,7 +25,7 @@
   height: fit-content;
   padding: 1rem;
   border-radius: 14px;
-  background-color: $white;
+  background-color: #EDE4E0;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   z-index: 3000;
   animation: slide-down 300ms ease-out forwards;
