contact modal rwd

--- a/src/components/Layout/Projects/Projects.module.scss
+++ b/src/components/Layout/Projects/Projects.module.scss
@@ -4,7 +4,7 @@
     display: grid;
     grid-template-rows: 1fr 1fr;
     justify-items: center;
-    height: 120vh;
+    height: 55em;
     width: 100%;
     padding: 150px 0;
     background-image: linear-gradient(to bottom, #000 0%, $primary 100%);
