--- a/src/components/Layout/Contact/ContactDetails.module.scss
+++ b/src/components/Layout/Contact/ContactDetails.module.scss
@@ -2,12 +2,21 @@
 
 
 .contactDetails {
-    width: 400px;
+    width: 500px;
     display: grid;
     gap: 1em;
     padding: 1em;
 
+    @include breakpoint(sm) {
+        width: 300px;
+    }
+
     &__heading {
+        @include breakpoint(sm) {
+            display: grid;
+            text-align: center;
+            justify-content: start;
+        }
         h4 {
             font-size: $headingH3;
             font-weight: bold;
@@ -18,6 +27,7 @@
 
         p {
             font-size: 18px;
+            word-wrap:  break-word; 
         }
     }
 
@@ -25,8 +35,18 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         justify-content: center;
-        gap: 10px;
+        align-items: center;
+        gap: 20px;
         padding: 4em;
+
+        @include breakpoint(sm) {
+        display: grid;
+            text-align: center;
+            justify-content: start;
+            grid-template-columns: 1fr;
+            padding: 2em;
+
+        }
 
         a {
             display: flex;
