--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -8,9 +8,9 @@
     align-items: center;
     position: relative;
     width: 100%;
-    backdrop-filter: blur(5px);
     z-index: 1000;
     transition: all 0.5s ease;
+    background-color: #000;
 
     @include breakpoint(sm) {
         padding: 0 3rem;
